--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
@@ -43,7 +43,7 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
     <!--Handsontable -->
-    <link href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.css"/>
     <link href="~/Content/css/HansontableHeaderColors.css" rel="stylesheet" />
 
     <style>
@@ -414,7 +414,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/wfaccordion/wf.accordion.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/languages/es-MX.js"></script>
 
     <script>
@@ -439,11 +439,11 @@
         ];
 
         const columnasQueNecesitanValidacion = [
-            "Tipo Metal",
-            "Tipo de Venta",
-            "Modelo de negocio",
-            "Posición del Rollo para embarque",
-            "S&P 1 (antes IHS)",
+            //"Tipo Metal",
+            //"Tipo de Venta",
+            //"Modelo de negocio",
+            //"Posición del Rollo para embarque",
+            //"S&P 1 (antes IHS)",
             //"Req. conciliación Puntas y colas",
             //"Conciliación Scrap Ingenieria",
             // Añade más columnas según sea necesario
