--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditRollo.cshtml
@@ -43,7 +43,7 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
     <!--Handsontable -->
-    <link href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.css"/>
     <link href="~/Content/css/HansontableHeaderColors.css" rel="stylesheet" />
     <style>
 
@@ -403,7 +403,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/includes
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/wfaccordion/wf.accordion.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/languages/es-MX.js"></script>
 
 
@@ -427,13 +427,13 @@
         ]
 
         const columnasQueNecesitanValidacion = [
-            "Tipo Metal",
-            "Tipo de Venta",
-            "Modelo de negocio",
-            "Posición del Rollo para embarque",
-            "S&P 1 (antes IHS)",
-            "Peso Max (KG)",
-            "Peso Min (KG)",
+            //"Tipo Metal",
+            //"Tipo de Venta",
+            //"Modelo de negocio",
+            //"Posición del Rollo para embarque",
+            //"S&P 1 (antes IHS)",
+            //"Peso Max (KG)",
+            //"Peso Min (KG)",
             //"Req. conciliación Puntas y colas",
             //"Conciliación Scrap Ingenieria",
             // Añade más columnas según sea necesario
