--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -64,7 +64,7 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/flat/green.css")" rel="stylesheet">
     <!--Handsontable -->
-    <link href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.css"/>
     <link href="~/Content/css/HansontableHeaderColors.css" rel="stylesheet" />
 
     <style>
@@ -438,7 +438,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
     <script src="~/Content/vendors/wfaccordion/wf.accordion.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/languages/es-MX.js"></script>
 
 
@@ -464,18 +464,18 @@
         ];
 
         const columnasQueNecesitanValidacion = [
-            "Tipo Metal",
-            "Tipo de Venta",
-            "Modelo de negocio",
-            "S&P 1 (antes IHS)",
+            //"Tipo Metal",
+            //"Tipo de Venta",
+            //"Modelo de negocio",
+            //"S&P 1 (antes IHS)",
             //"Trapecio: ángulo A",
             //"Trapecio: ángulo B",
             //'Scrap permitido (%)',
             //'Req. conciliación Puntas y colas',
             //'Conciliacion Scrap Ingeniería',
-            'Piezas por auto',
-            'Pzas por Golpe',
-            'Peso Inicial',
+            //'Piezas por auto',
+            //'Pzas por Golpe',
+            //'Peso Inicial',
             // Añade más columnas según sea necesario
         ];
 
