--- a/CódigoFuente/BitacorasProduccion/Views/budget_rel_tipo_cambio_fy/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/budget_rel_tipo_cambio_fy/Edit.cshtml
@@ -76,7 +76,7 @@
 @section Scripts {
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/14.6.1/handsontable.full.min.js"></script>
     <script>
         var hot;
         // Función para cargar los datos del año fiscal seleccionado
