2025-03-13 Se agrega calculo de golpes teoricos.

--- a/CódigoFuente/BitacorasProduccion/Views/Account/ResetPassword.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Account/ResetPassword.cshtml
@@ -81,7 +81,7 @@
     </div>
 </div>
 
-@if (String.IsNullOrEmpty(Model.Code))
+@if (Model != null && String.IsNullOrEmpty(Model.Code))
 {
     <script>
         $(document).ready(function () {
