--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
@@ -64,6 +64,9 @@
                             </p>
                             <a href="@Url.Action("engineering_dimension", ViewBag.ControllerName)" class="btn btn-catalog">
                                 <i class="fa fa-wrench"></i> Engineering Dimension
+                            </a> 
+                            <a href="@Url.Action("strokes_per_minute", ViewBag.ControllerName)" class="btn btn-catalog">
+                                <i class="fa fa-clock"></i> Strokes per Minute
                             </a>
                         </div>
 
