2025-03-18 Se agrega catalogo para golpes por minuto.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Catalogs/Index.cshtml
@@ -69,8 +69,17 @@
                                 <i class="fa fa-clock"></i> Strokes per Minute
                             </a>
                         </div>
-
-                        <!-- Si en el futuro agregas más áreas, puedes añadir más bloques similares -->
+                        <!-- Sección para el área de Engineering -->
+                        <div class="catalog-area">
+                            <h3><i class="fa fa-cogs"></i> Data Management</h3>
+                            <p>
+                                Manage Data Management-related catalogs, such as Efficiency and Capacity.
+                            </p>
+                            <a href="@Url.Action("hours_by_line", ViewBag.ControllerName)" class="btn btn-catalog">
+                                <i class="fa fa-clock"></i> Times per Line
+                            </a> 
+                           
+                        </div>
                         <!-- Finaliza Contenido -->
                     </div>
                 </div>
