--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/Create.cshtml
@@ -202,7 +202,7 @@
                                         <div class="compact-col">
                                             <label for="Incoterm" class="control-label">Incoterm</label>
                                             <select id="Incoterm" class="form-control select2">
-                                                <option value="">Seleccione un Incoterm</option>
+                                                <option value="">Select an Incoterm</option>
                                                 <option value="CFR">CFR - COSTE Y FLETE (PUERTO DE DESTINO CONVENIDO)</option>
                                                 <option value="CIF">CIF - COSTE, SEGURO Y FLETE (PUERTO DE DESTINO CONVENIDO)</option>
                                                 <option value="CPT">CPT - TRANSPORTE PAGADO HASTA (EL LUGAR DE DESTINO CONVENIDO)</option>
@@ -218,10 +218,10 @@
                                             </select>
                                         </div>
                                         <div class="compact-col">
-                                            <!-- Select para Origen del Material -->
-                                            <label for="MaterialOrigin" class="control-label">Origen del Material</label>
+                                            <!-- Select para Material Origin -->
+                                            <label for="MaterialOrigin" class="control-label">Material Origin</label>
                                             <select id="MaterialOrigin" class="form-control select2">
-                                                <option value="">Seleccione el país de origen</option>
+                                                <option value="">Select the country of origin</option>
                                                 <option value="China">China</option>
                                                 <option value="Japan">Japón</option>
                                                 <option value="Germany">Alemania</option>
@@ -235,9 +235,9 @@
                                             </select>
                                         </div>
                                         <div class="compact-col">
-                                            <!-- Select para Origen del Material -->
-                                            <label for="multiplos" class="control-label">Multiplos</label>
-                                            <input type="number" class="form-control" id="multiplos" name="multiplos" value="1" placeholder="1">
+                                            <!-- Select para Material Origin -->
+                                            <label for="Multiples" class="control-label">Multiples</label>
+                                            <input type="number" class="form-control" id="Multiples" name="Multiples" value="1" placeholder="1">
                                         </div>
 
                                     </div>
@@ -255,9 +255,9 @@
                                     <h4>Import Additional Data</h4>
                                     <div class="compact-row">
                                         <div class="compact-col">
-                                            <label for="modelo_negocio" class="control-label">Modelo Negocio</label>
+                                            <label for="modelo_negocio" class="control-label">Business Model</label>
                                             <select id="modelo_negocio" class="form-control select2">
-                                                <option value="">Seleccione un Modelo de Negocio</option>
+                                                <option value="">Select a Business Model</option>
                                                 <option value="1">Importación Definitiva</option>
                                                 <option value="2">Venta Nacional</option>
                                                 <option value="3">Consignación</option>
@@ -267,7 +267,7 @@
                                         <div class="compact-col">
                                             <label for="Incoterm2" class="control-label">Incoterm</label>
                                             <select id="Incoterm2" class="form-control select2">
-                                                <option value="">Seleccione un Incoterm</option>
+                                                <option value="">Select an Incoterm</option>
                                                 <option value="CFR">CFR - COSTE Y FLETE (PUERTO DE DESTINO CONVENIDO)</option>
                                                 <option value="CIF">CIF - COSTE, SEGURO Y FLETE (PUERTO DE DESTINO CONVENIDO)</option>
                                                 <option value="CPT">CPT - TRANSPORTE PAGADO HASTA (EL LUGAR DE DESTINO CONVENIDO)</option>
@@ -283,10 +283,10 @@
                                             </select>
                                         </div>
                                         <div class="compact-col">
-                                            <!-- Select para Origen del Material -->
-                                            <label for="MaterialOrigin2" class="control-label">Origen del Material</label>
+                                            <!-- Select para Material Origin -->
+                                            <label for="MaterialOrigin2" class="control-label">Material Origin</label>
                                             <select id="MaterialOrigin2" class="form-control select2">
-                                                <option value="">Seleccione el país de origen</option>
+                                                <option value="">Select the country of origin</option>
                                                 <option value="China">China</option>
                                                 <option value="Japan">Japón</option>
                                                 <option value="Germany">Alemania</option>
