2025-03-20 Se configura copilot.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditClientPartInformation.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditClientPartInformation.cshtml
@@ -529,6 +529,10 @@
                                     <div class="col-md-3">
                                         <label>Stroke / shift</label>
                                         <input type="text" id="strokes_shift" class="form-control" placeholder="Stroke / shift" readonly />
+                                    </div> 
+                                    <div class="col-md-3">
+                                        <label>% Capacity</label>
+                                        <input type="text" id="capacity" class="form-control" placeholder="0%" readonly />
                                     </div>
                                 </div>
                             </div>
